--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -4,3 +4,18 @@
     color: var(--dark-main-color);
 
 }
+
+.progressWrap{
+    margin-top: 150px;
+    text-align: center;
+    
+    
+}
+
+.text{
+    font-size: 36px;
+    font-weight: 700;
+    color: var(--dark-main-color);
+    margin-bottom: 20px;
+    
+}
