--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,9 @@
 @import '../../vars.css';
+.filter__wrap{
+    display:flex;
+    gap: 8px;
+    flex-direction:column;
+}
 
 .filter__input{
     width: 250px;
