--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,3 +1,5 @@
+@import '../../vars.css';
+
 .wrapper {
     display: flex;
     align-items: center;
@@ -8,3 +10,6 @@
     font-weight: 700;
   }
   
+  .name{
+    color: var(--dark-main-color);
+  }
